   Master REST API. (Ryu Kobayashi via ozawa)

   MAPREDUCE-6364. Add a "Kill" link to Task Attempts page. (Ryu Kobayashi
   via ozawa)

   MAPREDUCE-6304. Specifying node labels when submitting MR jobs.
   (Naganarasimha G R via wangda)

   MAPREDUCE-6415. Create a tool to combine aggregated logs into HAR files. 
   (Robert Kanter via kasha)

  IMPROVEMENTS

    MAPREDUCE-6291. Correct mapred queue usage command.
    (Brahma Reddu Battula via harsh)

    MAPREDUCE-579. Streaming "slowmatch" documentation. (harsh)

    MAPREDUCE-6287. Deprecated methods in org.apache.hadoop.examples.Sort
    (Chao Zhang via harsh)

    MAPREDUCE-5190. Unnecessary condition test in RandomSampler.
    (Jingguo Yao via harsh)

    MAPREDUCE-6239. Consolidate TestJobConf classes in
    hadoop-mapreduce-client-jobclient and hadoop-mapreduce-client-core
    (Varun Saxena via harsh)

    MAPREDUCE-5807. Print usage by TeraSort job. (Rohith via harsh)

    MAPREDUCE-4653. TestRandomAlgorithm has an unused "import" statement.
    (Amir Sanjar via harsh)

    MAPREDUCE-6100. replace "mapreduce.job.credentials.binary" with
    MRJobConfig.MAPREDUCE_JOB_CREDENTIALS_BINARY for better readability.
    (Zhihai Xu via harsh)

    MAPREDUCE-6105. Inconsistent configuration in property
    mapreduce.reduce.shuffle.merge.percent. (Ray Chiang via harsh)

    MAPREDUCE-4414. Add main methods to JobConf and YarnConfiguration,
    for debug purposes. (Plamen Jeliazkov via harsh)

    MAPREDUCE-5755. MapTask.MapOutputBuffer#compare/swap should have
    @Override annotation. (ozawa)

    MAPREDUCE-6282. Reuse historyFileAbsolute.getFileSystem in
    CompletedJob#loadFullHistoryData for code optimization.
    (zxu via rkanter)

    MAPREDUCE-6307. Remove property
    mapreduce.tasktracker.taskmemorymanager.monitoringinterval.
    (J.Andreina via aajisaka)

    MAPREDUCE-6192. Create unit test to automatically compare
    MR related classes and mapred-default.xml (rchiang via rkanter)
